--- a/frontend/src/components/Side/Side.css
+++ b/frontend/src/components/Side/Side.css
@@ -38,9 +38,9 @@
 .side-dashboard > h4 {
   color: #181818;
 }
-/* .logout{
+.logout{
     
-} */
+}
 
 .side-totalContact {
   background: #2da5fc;
