--- a/frontend/src/components/login.css
+++ b/frontend/src/components/login.css
@@ -1,3 +1,9 @@
+
+/* .main-container{
+    width: 100vw;
+    min-height: 100vh;
+    overflow: hidden;
+} */
 .main-cont{
     display: flex;
     flex-direction: column;
